--- a/ru/toc.yaml
+++ b/ru/toc.yaml
@@ -1,9 +1,9 @@
-title: Документация
+title: Тестовая информация
 href: index.yaml
 items: 
-  - name: Эбоут
-    href: about.md
-  - name: Облако 
+  - name: Chapter
+    link: chapter
+    description: Рыба для тестирования
     include:
-      path: cloud/toc.yaml
+      path: chapter/toc.yaml
       mode: link
