Update chapter and sub-chapter titles and descriptions

--- a/ru/index.yaml
+++ b/ru/index.yaml
@@ -4,3 +4,6 @@ links:
   - title: Chapter
     href: chapter/
     description: Рыба для тестирования
+  - title: Toyota
+    href: toyota/
+    description: Немного информации о Тойота
